--- a/Arduino/dekade-ino/ino.ini
+++ b/Arduino/dekade-ino/ino.ini
@@ -3,7 +3,7 @@ board-model = pro5v328
 
 [upload]
 board-model = pro5v328
-serial-port = /dev/ttyACM1
+serial-port = /dev/ttyUSB0
 
 [serial]
-serial-port = /dev/ttyACM1
+serial-port = /dev/ttyUSB0
